fixed layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,6 @@ a:hover {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    font-size: 2rem;
 }
 
 
@@ -89,7 +88,7 @@ a:hover {
     margin-top: 3em;
     margin-bottom: 4em;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
     grid-gap: 2em;
     align-items: center;
   }
